fixed menu toggle z-index

--- a/WACAI18/css/style.css
+++ b/WACAI18/css/style.css
@@ -128,9 +128,9 @@ hr.small {
 
 #menu-toggle {
     position: fixed;
-    z-index: 10000;
     top: 0;
     right: 0;
+    z-index: 1000;
 }
 
 #sidebar-wrapper.active {
@@ -149,8 +149,12 @@ hr.small {
     margin: 30px 30px 0 0;
     padding: 15px 20px;
     border-radius: 30px;
+    
 }
 
+#menu-close {
+    z-index: 20000;
+}
 
 /* Header */
 
